ordered input items by date, prevent overlapping labels, change z-index of timeline dots

--- a/style.css
+++ b/style.css
@@ -10,6 +10,11 @@ body{
 h1{
 	text-align: center;
 }
+#top{
+	/*position:fixed;*/
+	width:100%;
+	z-index:10; 
+}
 #timeline-container{
 	padding:30px;
 	border-top: 2px solid;	
